--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
+    <head>
+        <title>PRINCE CHANDAPILLAI</title>
+    </head>
 Hello there, awesome person!
   </body>
 </html>
