--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <h1>PRINCE CHANDAPILLAI</h1>
 Hello there, awesome person!
+    <img> src=https://avatars.githubusercontent.com/u/85348937?v=4>
   </body>
 </html>
 
