--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title>PRINCE CHANDAPILLAI</title>
     </head>
     <h1>PRINCE CHANDAPILLAI</h1>
+    <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
+
 Hello there, awesome person!
     <img src="https://octodex.github.com/images/vinyltocat.png">
 
