--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <body>
     <head>
-        <title>PRINCE CHANDAPILLAI</title>
+      <title>PRINCE CHANDAPILLAI</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
     </head>
     <h1>PRINCE CHANDAPILLAI</h1>
     <ul>
