--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <h1>PRINCE CHANDAPILLAI</h1>
     <ul>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Unordered list</li>
+    <li>TRY TO STUDY</li>
+    <li>WEB </li>
+    <li>DEVELOPMENT</li>
 </ul>
     <li><a href="https://github.com">This is a link to GitHub!</a></li>
 
-Hello there, awesome person!
+ THANKYOU FOR CONNECTING 
     <img src="https://octodex.github.com/images/vinyltocat.png">
 
   </body>
